# mrraging

./: .gitignore  main.py  pyproject.toml  rxconfig.py
Build WebGL/: index.html
Build WebGL 2/: index.html
mrrager/: mrrager.py
mrrager/background/: emotion_scan.py
mrrager/components/: cam_stream.py  sidebar.py
mrrager/pages/: dashboard.py  game.py  index.py  settings.py
mrrager/templates/: template.py
