[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["mosguinz <mos.guinz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
hume = {extras = ["stream"], version = "^0.4.1"}
python-dotenv = "^1.0.0"
websocket-client = "^1.6.4"
opencv-python = "^4.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
